// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge spike after day 1`] = `
Array [
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 123 ",
  "Fee: 124 ",
  "Fee: 124 ",
  "Fee: 124 ",
  "Fee: 124 ",
  "Fee: 124 ",
  "Fee: 100 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge spike after initialization 1`] = `
Array [
  "Fee: 3760 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 2881 ",
  "Fee: 2389 ",
  "Fee: 1623 ",
  "Fee: 1006 ",
  "Fee: 655 ",
  "Fee: 458 ",
  "Fee: 351 ",
  "Fee: 282 ",
  "Fee: 238 ",
  "Fee: 211 ",
  "Fee: 191 ",
  "Fee: 177 ",
  "Fee: 166 ",
  "Fee: 158 ",
  "Fee: 152 ",
  "Fee: 147 ",
  "Fee: 143 ",
  "Fee: 139 ",
  "Fee: 136 ",
  "Fee: 134 ",
  "Fee: 108 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge step after day 1`] = `
Array [
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 100 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge step after initialization 1`] = `
Array [
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 14920 ",
  "Fee: 14574 ",
  "Fee: 13591 ",
  "Fee: 11806 ",
  "Fee: 9631 ",
  "Fee: 7682 ",
  "Fee: 6238 ",
  "Fee: 5262 ",
  "Fee: 4618 ",
  "Fee: 4192 ",
  "Fee: 3904 ",
  "Fee: 3705 ",
  "Fee: 3563 ",
  "Fee: 3459 ",
  "Fee: 3382 ",
  "Fee: 3322 ",
  "Fee: 3277 ",
  "Fee: 3240 ",
  "Fee: 3124 ",
]
`;

exports[`AlgebraBasePluginV1 AlgebraBasePluginV1 external methods #changeFeeConfiguration feeConfig getter gas cost 1`] = `23713`;
